Fixed overflow in mam message display

--- a/client/src/app/routes/Mam.scss
+++ b/client/src/app/routes/Mam.scss
@@ -32,6 +32,7 @@
         .payload {
           width: 100%;
           margin: 0;
+          overflow: auto;
 
           &.ascii,
           &.json,
